--- a/config/settings.yml
+++ b/config/settings.yml
@@ -12,5 +12,26 @@ helpers:
 controller:
   sessions:
     value: "1"
-index:
+user:
+  name:
+    max_length: 50
+  email:
+    max_length: 255
+  password:
+    min_length: 6
+  helpers:
+    gravatar:
+      size: 100
+    post_per_page: 10
+  index:
     per_page: 10
+micropost:
+  picture_width: 400
+  picture_height: 400
+  picture_capacity: 5
+  content:
+    max_length: 140
+  gravatar:
+    size: 50
+custom:
+  size: 5
