--- a/config/settings.yml
+++ b/config/settings.yml
@@ -22,7 +22,7 @@ user:
   helpers:
     gravatar:
       size: 100
-    post_per_page: 10
+    post_per_page: 5
   index:
     per_page: 10
 micropost:
@@ -35,3 +35,7 @@ micropost:
     size: 50
 custom:
   size: 5
+view:
+  users:
+    show_follow:
+      size: 30
